# candle-gfn

./: .gitignore  Cargo.toml  README.md
candle-gfn/: Cargo.toml
candle-gfn-bin/: Cargo.toml  Readme.md
candle-gfn/src/: lib.rs  model.rs  sampler.rs  simple_grid_gfn.rs  state.rs  tf_bind_gfn.rs  trajectory.rs
example_scripts/: GFN_plot.ipynb  generate_spec.py  generate_spec_random.py  run_example.sh
