[package]
name = "candle-gfn-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-gfn = {path = "../candle-gfn", default-features = false }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.1", features = ["cuda", "cudnn"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
fxhash = "0.2.1"
clap = { version = "4.0.30", features = ["derive"] }
serde = "1.0.193"
serde_json = "1.0.108"
