[package]
name = "candle-gfn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.1", features = ["cuda", "cudnn"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
fxhash = "0.2.1"
rand = "0.8.5"
serde_json = "1.0.108"
